--- a/client/moonridge-query-dropdown.less
+++ b/client/moonridge-query-dropdown.less
@@ -6,8 +6,12 @@ mr-query-dropdown{
   .glyphicon{
     vertical-align: top;
     font-size: 22px;
+    &.active{
+      color: #0092ff;
+    }
   }
   .dropdown-menu{
+    padding-top: 15px;
     a{
       display: inline-block;
     }
